--- a/projects.html
+++ b/projects.html
@@ -29,9 +29,7 @@
             <button class="accordion">Creation of an auction webite</button>
             <div class="panel">
                 <br>
-                <p>Name of the project : Intemporal</p>
-                <br>
-                <p>Date of realization : 2023</p>
+                <h3>Project Intemporal, 2023</h3>
                 <br>
                 <p>I had the opportunity to develop during the year 2023 an auction site of watches named Intemporal within a team of 6 persons. This project was realized at the University Institute of Technology in Computer Sciences of Grenoble. I was in charge of the layout as well as the HTML, CSS and JavaScript realization of our site.
                     I worked on the ergonomic criteria of Bastien and Scapin in order to guarantee a good user experience, for example checking the contrasts with Adobe color.
@@ -62,9 +60,7 @@
             <button class="accordion">Creation of a first site about me</button>
             <div class="panel">
                 <br>
-                <p>Name of the project : Me</p>
-                <br>
-                <p>Date of realization : 2022</p>
+                <h3>Project Me, 2022</h3>
                 <br>
                 <p>I decided to create a first website summarizing my skills and my projects during the year 2022 in HTML, CSS and JavaScript.</p>
                 <br>
@@ -76,9 +72,7 @@
             <button class="accordion">Development of an event organization application</button>
             <div class="panel">
                 <br>
-                <p>Name of the project : Hopack</p>
-                <br>
-                <p>Date of realization : 2022</p>
+                <h3>Project Hopack, 2022</h3>
                 <br>
                 <p>During the year 2022, we developed an application in JavaFx and CSS in order to facilitate to the professional of the organization of wedding their job. This project was realized in group of 6 within the IUT 2 of Grenoble.</p>
                 <br>
@@ -96,9 +90,7 @@
             <button class="accordion">Development of a service rental website</button>
             <div class="panel">
                 <br>
-                <p>Name of the project : Op Heberg</p>
-                <br>
-                <p>Date of realization : 2022</p>
+                <h3>Project Op Heberg, 2022</h3>
                 <br>
                 <p>In 2022, I had the opportunity to work with another web developer with whom I realized the mock-ups and also a part of a site offering the possibility to rent servers. The mockups were made with figma and the front-end with HTML, SCSS and JavaScript.</p>
                 <br>
