--- a/projets.html
+++ b/projets.html
@@ -29,9 +29,7 @@
             <button class="accordion">Création d'un site de vente aux enchères</button>
             <div class="panel">
                 <br>
-                <p>Nom du projet : Intemporal</p>
-                <br>
-                <p>Date de réalisation : 2023</p>
+                <h3>Projet Intemporal, 2023</h3>
                 <br>
                 <p>J'ai eu l'occasion de développer au cours de l'année 2023 un site de vente aux enchères de montres nommé Intemporal au sein d'une équipe de 6 personnes. Ce projet a été réalisé à l'IUT 2 de Grenoble. J'ai été en charge du maquettage ainsi que de la réalisation HTML, CSS et JavaScript de notre site.
                     J'ai travaillé sur les critères ergonomiques de Bastien et Scapin afin de garantir une bonne expérience utilisateur, par exemple vérifier les contrastes à l'aide d'Adobe color.
@@ -63,7 +61,7 @@
             <button class="accordion">Création d'un premier site à propos de moi</button>
             <div class="panel">
                 <br>
-                <p>Nom du projet : Me</p>
+                <h3>Projet Me, 2022</h3>
                 <br>
                 <p>Date de réalisation : 2022</p>
                 <br>
@@ -77,9 +75,7 @@
             <button class="accordion">Développement d'une application d'organisation évènementielle</button>
             <div class="panel">
                 <br>
-                <p>Nom du projet : Hopack</p>
-                <br>
-                <p>Date de réalisation : 2022</p>
+                <h3>Projet Hopack, 2022</h3>
                 <br>
                 <p>Lors de l'année 2022, nous avons développé une application en JavaFx et CSS afin de faciliter aux professionnels de l'organisation de mariages leur métier. Ce projet a été réalisé en groupe de 6 au sein de l'IUT 2 de Grenoble.</p>
                 <br>
@@ -97,9 +93,7 @@
             <button class="accordion">Développement d'un site web de location de service</button>
             <div class="panel">
                 <br>
-                <p>Nom du projet : Op Heberg</p>
-                <br>
-                <p>Date de réalisation : 2022</p>
+                <h3>Projet Op Heberg, 2022</h3>
                 <br>
                 <p>En 2022, j'ai eu l'occasion de travailler avec un autre développeur web avec lequel j'ai réalisé les maquettes et ainsi qu'un partie d'un site offrant la possibilité de louer des serveurs. Les maquettes ont été réalisé à l'aide de figma et le front-end en HTML, SCSS et JavaScript.</p>
                 <br>
