--- a/projects.html
+++ b/projects.html
@@ -26,7 +26,7 @@
     </header>
     <div class="projects-container">
         <div class="projects-content">
-            <button class="accordion">Creation of an auction webite</button>
+            <button class="accordion">Creation of an auction website</button>
             <div class="panel">
                 <br>
                 <h3>Project Intemporal, 2023</h3>
