--- a/projets.html
+++ b/projets.html
@@ -33,7 +33,7 @@
                 <br>
                 <p>J'ai eu l'occasion de développer au cours de l'année 2023 un site de vente aux enchères de montres nommé Intemporal au sein d'une équipe de 6 personnes. Ce projet a été réalisé à l'IUT 2 de Grenoble. J'ai été en charge du maquettage ainsi que de la réalisation HTML, CSS et JavaScript de notre site.
                     J'ai travaillé sur les critères ergonomiques de Bastien et Scapin afin de garantir une bonne expérience utilisateur, par exemple vérifier les contrastes à l'aide d'Adobe color.
-                    J'ai également eu l'occasion de faire passer tests utilisateurs à des personnes extérieures à notre équipe afin de pouvoir améliorer notre site, notamment à l'aide de questionnaires SUS qui ont été passé avec brio.
+                    J'ai également eu l'occasion de faire passer des tests utilisateurs à des personnes extérieures à notre équipe afin de pouvoir améliorer notre site, notamment à l'aide de questionnaires SUS qui ont été passé avec brio.
                 </p>
                 <br>
                 <p>Voici quelques captures d'écrans de ce que j'ai pu réaliser au cours de ce projet :</p>
