--- a/projets.html
+++ b/projets.html
@@ -95,7 +95,7 @@
                 <br>
                 <h3>Projet Op Heberg, 2022</h3>
                 <br>
-                <p>En 2022, j'ai eu l'occasion de travailler avec un autre développeur web avec lequel j'ai réalisé des maquettes ainsi qu'une petite partie du code d'un site offrant la possibilité de louer des serveurs. Les maquettes ont été réalisé à l'aide de figma et le front-end en HTML, SCSS et JavaScript.</p>
+                <p>En 2022, j'ai eu l'occasion de travailler avec un autre développeur web avec lequel j'ai réalisé une petite partie des maquettes ainsi que du code d'un site offrant la possibilité de louer des serveurs. Les maquettes ont été réalisé à l'aide de figma et le front-end en HTML, SCSS et JavaScript.</p>
                 <br>
                 <p>Voici quelques captures d'écran de ce site : </p>
                 <br>
