--- a/projects.html
+++ b/projects.html
@@ -92,7 +92,7 @@
                 <br>
                 <h3>Project Op Heberg, 2022</h3>
                 <br>
-                <p>In 2022, I had the opportunity to work with another web developer with whom I realized the mock-ups and also a small part of the code of a site offering the possibility to rent servers. The mockups were made with figma and the front-end with HTML, SCSS and JavaScript.</p>
+                <p>In 2022, I had the opportunity to work with another web developer with whom I realized a small part of the mock-ups and code of a site offering the possibility to rent servers. The mockups were made with figma and the front-end with HTML, SCSS and JavaScript.</p>
                 <br>
                 <p>Here are some screenshots of this site : </p>
                 <br>
