--- a/a-propos-de-moi.html
+++ b/a-propos-de-moi.html
@@ -32,6 +32,7 @@
                 <p>Je m'appelle Ehrler Ethan et je suis étudiant à l'Université Informatique de Grenoble en deuxième année. J'apprécie le développement web ainsi que le design et le dessin. Je suis quelqu'un qui aime travailler en équipe mais qui est tout autant capable de 
                   travailler seul. Je suis quelqu'un de très curieux et qui aime apprendre de nouvelles choses. Je suis très interessé par la musique. Je suis également passionné par l'automobile et les motos. Je possède le permis A1 (125cm3) aisni que le permis B (voiture). J'aime également regarder des animés ainsi que de jouer aux jeux vidéos tel que Minecraft, Forza, Genshin ou encore Cyberpunk.
                   Dans ma vie j'ai eu l'occasion de pratiquer pendant 10 ans du tennis de table, du karaté pendant deux ans et je skie régulièrment depuis très jeune, discipline pour laquelle j'ai pu suivre des cours. 
+                  Je fais également partie d'une association au sein de mon village qui s'occupe de l'organisation de fêtes et d'événements pour celui-ci. 
                 </p>
                 <br>
                 <br>
