--- a/about-me.html
+++ b/about-me.html
@@ -32,6 +32,7 @@
               <p>My name is Ehrler Ethan and I'm a student at the Computer Science University of Grenoble in my second year. I enjoy web development as well as design and drawing. I am someone who likes to work in a team but is also able to work alone. 
                 I am a very curious person and I like to learn new things. I am very interested in music. I am also passionate about cars and motorcycles. I have the A1 license (125cm3) as well as the B license (car). I also like to watch anime and I like video games such as Minecraft, Forza, Genshin or Cyberpunk.
                 In my life I had the opportunity to practice for 10 years table tennis, karate for two years and I ski regularly since I was very young, discipline where I had lessons. 
+                I am also part of an association in my village that organizes parties and events for it. 
               </p>
               <br>
               <br>
