--- a/index-en.html
+++ b/index-en.html
@@ -81,7 +81,7 @@
         </div>
         <div class="hero-content">
             <h1>Hi, I'm Ethan</h1>
-            <h2>Web Developer</h2>
+            <h2>Developer</h2>
             <div class="button-container">
                 <button onclick="window.location.href='projects.html';">Projects</button>
                 <button onclick="window.location.href='skills.html';">Skills</button>
