--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
         </div>
         <div class="hero-content">
             <h1>Bonjour, je suis Ethan</h1>
-            <h2>Développeur web</h2>
+            <h2>Développeur</h2>
             <div class="button-container">
                 <button onclick="window.location.href='projets.html';">Projets</button>
                 <button onclick="window.location.href='competences.html';">Compétences</button>
