--- a/projects.html
+++ b/projects.html
@@ -10,7 +10,7 @@
   </head>
   <body>
     <div class="transition transition-slide is-active"></div>
-    <header>
+    <header id="content" >
         <nav>
             <a class="back" href="index-en.html"><svg xmlns="http://www.w3.org/2000/svg" width="40" height="40" viewBox="0 0 24 24" style="fill: #4579e7 ;transform: msFilter"><path d="M18.464 2.114a.998.998 0 0 0-1.033.063l-13 9a1.003 1.003 0 0 0 0 1.645l13 9A1 1 0 0 0 19 21V3a1 1 0 0 0-.536-.886zM17 19.091 6.757 12 17 4.909v14.182z"></path></svg><h1 class="title">My projects</h1></a> 
             <div class="nav-container">
@@ -74,7 +74,7 @@
                 <br>
                 <h3>Project Hopack, 2022</h3>
                 <br>
-                <p>During the year 2022, we developed an application in JavaFx and CSS in order to facilitate to the professional of the organization of wedding their job. This project was realized in group of 6 within the IUT 2 of Grenoble.</p>
+                <p>During the year 2022, we developed an application in JavaFx and CSS in order to facilitate to the professional of the organization of wedding their job. This project was realized in group of 6 within the University Institute of Technology in Computer Sciences of Grenoble.</p>
                 <br>
                 <p>Here are some views of our application : </p>
                 <br>
@@ -103,6 +103,75 @@
                 <br>
             </div>
         </div>
+        <div class="projects-content">
+            <button class="accordion">Development of a website to rent IT services</button>
+            <div class="panel">
+                <br>
+                <h3>Project Rent a dev, 2022</h3>
+                <br>
+                <p>I had the opportunity in 2022 to realize in binomial a web site of rent of computer services which answered the requests of another binomial. This project was realized at the University Institute of Technology in Computer Sciences of Grenoble.</p>
+                <br>
+                <p>Here is a screenshot of the result : </p>
+                <br>
+                <div class="image-container">
+                    <img src="img/rent/rent-1.png" alt="">
+                </div>
+                <br>
+            </div>
+        </div>
+        <div class="projects-content">
+            <button class="accordion">Installing a Debian server</button>
+            <div class="panel">
+                <br>
+                <h3>Project Installing a server, 2022</h3>
+                <br>
+                <p>In 2022, I had the opportunity to install a Debian 11 server and to make an installation guide for it at the University Institute of Technology in Computer Sciences of Grenoble.</p>
+                <br>
+                <p>Here is the link to this guide : <a href="https://docs.google.com/document/d/1BFLG4XoIHL3mIChEoBPiWRuqg-NfpPvxeeQaxxsCCf8/edit?usp=sharing" class="links" target="_blank">guide</a></p>
+                <br>
+            </div>
+        </div>
+        <div class="projects-content">
+            <button class="accordion">Sorting a database</button>
+            <div class="panel">
+                <br>
+                <h3>Project Open Food Facts, 2022</h3>
+                <br>
+                <p>This project was realized in 2022 at the University Institute of Technology in Computer Sciences of Grenoble in binomial. It consisted in trilling the open food facts database in order to make statistical analysis. PostgreSQL and LaTeX were used.</p>
+                <br>
+            </div>
+        </div>
+        <div class="projects-content">
+            <button class="accordion">Development of an AI</button>
+            <div class="panel">
+                <br>
+                <h3>Project Automatic classification, 2021</h3>
+                <br>
+                <p>In 2021, the University Institute of Technology in Computer Sciences of Grenoble proposed us a project which consisted in realizing an "AI" in Java which trillates press articles in categories according to the words which compose them. This project was realized in binomial.</p>
+                <br>
+                <p>Here is the report that resulted from this project : <a class="links" target="_blank" href="https://docs.google.com/document/d/1bq-gHD8PLOdIfSLn-cZvQZqpkWGXerkS8wLXdEzXljg/edit?usp=sharing">report</a></p>
+                <br>
+            </div>
+        </div>
+        <div class="projects-content">
+            <button class="accordion">Development of a website for a digital enterprise</button>
+            <div class="panel">
+                <br>
+                <h3>Project Hardis Group, 2021</h3>
+                <br>
+                <p>The University Institute of Technology in Computer Sciences of Grenoble proposed us as a project in 2021 to realize a website for a digital company. This project was realized in trinomial, this is the first website that I had the opportunity to realize.</p>
+                <br>
+                <p>Here are some captures of this site : </p>
+                <br>
+                <div class="image-container">
+                    <img src="img/hardis/hardis-1.PNG" alt="">
+                </div>
+                <br>
+            </div>
+        </div>
+    </div>
+    <div class="scrollUp">
+        <a href="#content"><svg xmlns="http://www.w3.org/2000/svg" width="40" height="40" viewBox="0 0 24 24" style="fill: rgba(69, 121, 231, 1);transform: msFilter"><path d="M3 19h18a1.002 1.002 0 0 0 .823-1.569l-9-13c-.373-.539-1.271-.539-1.645 0l-9 13A.999.999 0 0 0 3 19zm9-12.243L19.092 17H4.908L12 6.757z"></path></svg></a>
     </div>
     <script src="js/transition.js"></script>
     <script src="js/accordion.js"></script>
