--- a/projets.html
+++ b/projets.html
@@ -10,7 +10,7 @@
   </head>
   <body>
     <div class="transition transition-slide is-active"></div>
-    <header>
+    <header id="content" >
         <nav>
             <a class="back" href="index.html"><svg xmlns="http://www.w3.org/2000/svg" width="40" height="40" viewBox="0 0 24 24" style="fill: #4579e7 ;transform: msFilter"><path d="M18.464 2.114a.998.998 0 0 0-1.033.063l-13 9a1.003 1.003 0 0 0 0 1.645l13 9A1 1 0 0 0 19 21V3a1 1 0 0 0-.536-.886zM17 19.091 6.757 12 17 4.909v14.182z"></path></svg><h1 class="title">Mes projets</h1></a> 
             <div class="nav-container">
@@ -106,6 +106,81 @@
                 <br>
             </div>
         </div>
+
+
+
+
+
+
+        <div class="projects-content">
+            <button class="accordion">Développement d'un site web permettant de louer des services informatiques</button>
+            <div class="panel">
+                <br>
+                <h3>Projet Rent a dev, 2022</h3>
+                <br>
+                <p>J'ai eu l'occasion en 2022 de réaliser en binôme un site web de location de services informatiques qui répondait aux demandes d'un autre binôme. Ce projet a été réalisé à l'IUT Informatique de Grenoble.</p>
+                <br>
+                <p>Voici une capture d'écran du résultat : </p>
+                <br>
+                <div class="image-container">
+                    <img src="img/rent/rent-1.png" alt="">
+                </div>
+                <br>
+            </div>
+        </div>
+        <div class="projects-content">
+            <button class="accordion">Installation d'un serveur Debian</button>
+            <div class="panel">
+                <br>
+                <h3>Projet Installation de serveur, 2022</h3>
+                <br>
+                <p>En 2022, j'ai eu l'occasion d'installer un serveur Debian 11 et de réaliser un guide d'installation pour celui-ci au sein de l'IUT Informatique de Grenoble.</p>
+                <br>
+                <p>Voici le lien de ce guide : <a href="https://docs.google.com/document/d/1BFLG4XoIHL3mIChEoBPiWRuqg-NfpPvxeeQaxxsCCf8/edit?usp=sharing" class="links" target="_blank">guide d'installation</a></p>
+                <br>
+            </div>
+        </div>
+        <div class="projects-content">
+            <button class="accordion">Tri d'une base de données</button>
+            <div class="panel">
+                <br>
+                <h3>Projet Open Food Facts, 2022</h3>
+                <br>
+                <p>Ce projet a été réalisé en 2022 à l'IUT Informatique de Grenoble en binôme. Celui-ci consistait à triller la base de données d'Open Food Facts en vue de faire des analyses statistiques. PostgreSQL et LaTeX ont été utilisés.</p>
+                <br>
+            </div>
+        </div>
+        <div class="projects-content">
+            <button class="accordion">Développement d'une IA</button>
+            <div class="panel">
+                <br>
+                <h3>Projet Classification automatique, 2021</h3>
+                <br>
+                <p>En 2021, l'IUT Informatique de Grenoble nous a proposé un projet qui consistait à réaliser une "IA" en Java qui trillait des articles de presse dans des catégories en fonction des mots les composants. Ce projet a été réalisé en binôme.</p>
+                <br>
+                <p>Voici le rapport qui a découlé de ce projet : <a class="links" target="_blank" href="https://docs.google.com/document/d/1bq-gHD8PLOdIfSLn-cZvQZqpkWGXerkS8wLXdEzXljg/edit?usp=sharing">rapport</a></p>
+                <br>
+            </div>
+        </div>
+        <div class="projects-content">
+            <button class="accordion">Développement d'un site internet pour une ESN</button>
+            <div class="panel">
+                <br>
+                <h3>Projet Hardis Group, 2021</h3>
+                <br>
+                <p>L'IUT informatique nous a proposé comme projet en 2021 de réaliser un site web pour une entreprise du numérique. Ce projet a été réalisé en trinôme, ceci est le premier site internet que j'ai eu l'occasion de réaliser.</p>
+                <br>
+                <p>Voici quelques captures de ce site : </p>
+                <br>
+                <div class="image-container">
+                    <img src="img/hardis/hardis-1.PNG" alt="">
+                </div>
+                <br>
+            </div>
+        </div>
+    </div>
+    <div class="scrollUp">
+        <a href="#content"><svg xmlns="http://www.w3.org/2000/svg" width="40" height="40" viewBox="0 0 24 24" style="fill: rgba(69, 121, 231, 1);transform: msFilter"><path d="M3 19h18a1.002 1.002 0 0 0 .823-1.569l-9-13c-.373-.539-1.271-.539-1.645 0l-9 13A.999.999 0 0 0 3 19zm9-12.243L19.092 17H4.908L12 6.757z"></path></svg></a>
     </div>
     <script src="js/transition.js"></script>
     <script src="js/accordion.js"></script>
