--- a/skills.html
+++ b/skills.html
@@ -35,6 +35,10 @@
           <p>SQL</p>
           <p>Java</p>
           <p>C++</p>
+          <p>R</p>
+          <p>LaTeX</p>
+          <p>UML</p>
+          <p>Assembleur</p>
         </div>
       </div>
       <div class="skills-content">
@@ -45,6 +49,8 @@
           <p>VSCode</p>
           <p>Intellij</p>
           <p>CLion</p>
+          <p>R Studio</p>
+          <p>Visual Paradigm</p>
           <p>Linux</p>
           <p>Windows</p>
         </div>
