--- a/projects.html
+++ b/projects.html
@@ -26,7 +26,7 @@
     </header>
     <div class="projects-container">
         <div class="projects-content">
-            <button class="accordion">Creation of an auction website</button>
+            <button class="accordion">9 - Creation of an auction website</button>
             <div class="panel">
                 <br>
                 <h3>Project Intemporal, 2023</h3>
@@ -57,7 +57,7 @@
             </div>
         </div>
         <div class="projects-content">
-            <button class="accordion">Creation of a first site about me</button>
+            <button class="accordion">8 - Creation of a first site about me</button>
             <div class="panel">
                 <br>
                 <h3>Project Me, 2022</h3>
@@ -69,7 +69,7 @@
             </div>
         </div>
         <div class="projects-content">
-            <button class="accordion">Development of an event organization application</button>
+            <button class="accordion">7 - Development of an event organization application</button>
             <div class="panel">
                 <br>
                 <h3>Project Hopack, 2022</h3>
@@ -87,7 +87,7 @@
             </div>
         </div>
         <div class="projects-content">
-            <button class="accordion">Development of a service rental website</button>
+            <button class="accordion">6 - Development of a service rental website</button>
             <div class="panel">
                 <br>
                 <h3>Project Op Heberg, 2022</h3>
@@ -104,7 +104,7 @@
             </div>
         </div>
         <div class="projects-content">
-            <button class="accordion">Development of a website to rent IT services</button>
+            <button class="accordion">5 - Development of a website to rent IT services</button>
             <div class="panel">
                 <br>
                 <h3>Project Rent a dev, 2022</h3>
@@ -120,7 +120,7 @@
             </div>
         </div>
         <div class="projects-content">
-            <button class="accordion">Installing a Debian server</button>
+            <button class="accordion">4 - Installing a Debian server</button>
             <div class="panel">
                 <br>
                 <h3>Project Installing a server, 2022</h3>
@@ -132,7 +132,7 @@
             </div>
         </div>
         <div class="projects-content">
-            <button class="accordion">Sorting a database</button>
+            <button class="accordion">3 - Sorting a database</button>
             <div class="panel">
                 <br>
                 <h3>Project Open Food Facts, 2022</h3>
@@ -142,7 +142,7 @@
             </div>
         </div>
         <div class="projects-content">
-            <button class="accordion">Development of an AI</button>
+            <button class="accordion">2 - Development of an AI</button>
             <div class="panel">
                 <br>
                 <h3>Project Automatic classification, 2021</h3>
@@ -154,7 +154,7 @@
             </div>
         </div>
         <div class="projects-content">
-            <button class="accordion">Development of a website for a digital enterprise</button>
+            <button class="accordion">1 - Development of a website for a digital enterprise</button>
             <div class="panel">
                 <br>
                 <h3>Project Hardis Group, 2021</h3>
