--- a/projets.html
+++ b/projets.html
@@ -26,7 +26,7 @@
     </header>
     <div class="projects-container">
         <div class="projects-content">
-            <button class="accordion">Création d'un site de vente aux enchères</button>
+            <button class="accordion">9 - Création d'un site de vente aux enchères</button>
             <div class="panel">
                 <br>
                 <h3>Projet Intemporal, 2023</h3>
@@ -58,7 +58,7 @@
             </div>
         </div>
         <div class="projects-content">
-            <button class="accordion">Création d'un premier site à propos de moi</button>
+            <button class="accordion">8 - Création d'un premier site à propos de moi</button>
             <div class="panel">
                 <br>
                 <h3>Projet Me, 2022</h3>
@@ -72,7 +72,7 @@
             </div>
         </div>
         <div class="projects-content">
-            <button class="accordion">Développement d'une application d'organisation évènementielle</button>
+            <button class="accordion">7 - Développement d'une application d'organisation évènementielle</button>
             <div class="panel">
                 <br>
                 <h3>Projet Hopack, 2022</h3>
@@ -90,7 +90,7 @@
             </div>
         </div>
         <div class="projects-content">
-            <button class="accordion">Développement d'un site web de location de service</button>
+            <button class="accordion">6 - Développement d'un site web de location de service</button>
             <div class="panel">
                 <br>
                 <h3>Projet Op Heberg, 2022</h3>
@@ -106,14 +106,8 @@
                 <br>
             </div>
         </div>
-
-
-
-
-
-
         <div class="projects-content">
-            <button class="accordion">Développement d'un site web permettant de louer des services informatiques</button>
+            <button class="accordion">5 - Développement d'un site web permettant de louer des services informatiques</button>
             <div class="panel">
                 <br>
                 <h3>Projet Rent a dev, 2022</h3>
@@ -129,7 +123,7 @@
             </div>
         </div>
         <div class="projects-content">
-            <button class="accordion">Installation d'un serveur Debian</button>
+            <button class="accordion">4 - Installation d'un serveur Debian</button>
             <div class="panel">
                 <br>
                 <h3>Projet Installation de serveur, 2022</h3>
@@ -141,7 +135,7 @@
             </div>
         </div>
         <div class="projects-content">
-            <button class="accordion">Tri d'une base de données</button>
+            <button class="accordion">3 - Tri d'une base de données</button>
             <div class="panel">
                 <br>
                 <h3>Projet Open Food Facts, 2022</h3>
@@ -151,7 +145,7 @@
             </div>
         </div>
         <div class="projects-content">
-            <button class="accordion">Développement d'une IA</button>
+            <button class="accordion">2 - Développement d'une IA</button>
             <div class="panel">
                 <br>
                 <h3>Projet Classification automatique, 2021</h3>
@@ -163,7 +157,7 @@
             </div>
         </div>
         <div class="projects-content">
-            <button class="accordion">Développement d'un site internet pour une ESN</button>
+            <button class="accordion">1 - Développement d'un site internet pour une ESN</button>
             <div class="panel">
                 <br>
                 <h3>Projet Hardis Group, 2021</h3>
