--- a/recompenses.html
+++ b/recompenses.html
@@ -29,7 +29,7 @@
         <h2>Prix du meilleur prototype</h2>
         <div class="rewards-element">
           <img src="img/rewards/prototype.jpg" alt="">
-          <p>Récompense qui a été décernée à chaque membre de mon équipe au sein de l'IUT2 de Grenoble pour notre site de vente aux enchères Intemporal visible dans la section <a class="links" href="projets.html">projets</a>.</p>
+          <p>Récompense qui a été décernée à chaque membre de mon équipe au sein de l'IUT2 de Grenoble pour notre site de vente aux enchères Intemporal visible dans la section <a class="links" href="projets.html">projets</a> portant le numéro 9.</p>
         </div>
       </div>
     </div>
