--- a/rewards.html
+++ b/rewards.html
@@ -29,7 +29,7 @@
           <h2>Prize for the best prototype</h2>
           <div class="rewards-element">
             <img src="img/rewards/prototype.jpg" alt="">
-            <p>Award that was given to each member of my team in the University Institute of Technology in Computer Sciences of Grenoble for our auction site Intemporal visible in the section <a class="links" href="projets.html">projects</a>.</p>
+            <p>Award that was given to each member of my team in the University Institute of Technology in Computer Sciences of Grenoble for our auction site Intemporal visible in the section <a class="links" href="projets.html">projects</a> bearing the number 9.</p>
           </div>
         </div>
       </div>
