--- a/projects.html
+++ b/projects.html
@@ -74,7 +74,7 @@
                 <br>
                 <h3>Project Hopack, 2022</h3>
                 <br>
-                <p>During the year 2022, we developed an application in JavaFx and CSS in order to facilitate to the professional of the organization of wedding their job. This project was realized in group of 6 within the University Institute of Technology in Computer Sciences of Grenoble.</p>
+                <p>During the year 2022, we developed an application in JavaFx and CSS in order to facilitate to the professional of the organization of wedding their job. This project was realized in group of 6 within the University Institute of Technology in Computer Sciences of Grenoble and I had the opportunity to be project manager.</p>
                 <br>
                 <p>Here are some views of our application : </p>
                 <br>
