--- a/projets.html
+++ b/projets.html
@@ -77,7 +77,7 @@
                 <br>
                 <h3>Projet Hopack, 2022</h3>
                 <br>
-                <p>Lors de l'année 2022, nous avons développé une application en JavaFx et CSS afin de faciliter aux professionnels de l'organisation de mariages leur métier. Ce projet a été réalisé en groupe de 6 au sein de l'IUT 2 de Grenoble.</p>
+                <p>Lors de l'année 2022, nous avons développé une application en JavaFx et CSS afin de faciliter aux professionnels de l'organisation de mariages leur métier. Ce projet a été réalisé en groupe de 6 au sein de l'IUT 2 de Grenoble et j'ai eu l'opportunité d'être chef de projet.</p>
                 <br>
                 <p>Voici quelques vues de notre application : </p>
                 <br>
