--- a/index-en.html
+++ b/index-en.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="style/reset.css">
     <link rel="stylesheet" href="style/style.css">
   </head>
+  <body>
     <div class="transition transition-slide is-active"></div>
     <div class="stars">
         <div class="star"></div>
