--- a/projets.html
+++ b/projets.html
@@ -162,7 +162,7 @@
                 <br>
                 <h3>Projet Hardis Group, 2021</h3>
                 <br>
-                <p>L'IUT informatique nous a proposé comme projet en 2021 de réaliser un site web pour une entreprise du numérique. Ce projet a été réalisé en trinôme, ceci est le premier site internet que j'ai eu l'occasion de réaliser.</p>
+                <p>L'IUT informatique de Grenoble nous a proposé comme projet en 2021 de réaliser un site web pour une entreprise du numérique. Ce projet a été réalisé en trinôme, ceci est le premier site internet que j'ai eu l'occasion de réaliser.</p>
                 <br>
                 <p>Voici quelques captures de ce site : </p>
                 <br>
